tests/snapshots/run_wpt_conformance__coreml_convTranspose2d_float16_input_tensors_options_padding_is_the_same_upper_padding.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
conv_transpose2d.https.any.js convTranspose2d float16 input tensors options.padding is the same upper padding, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983271811_0_F7260C2D-5A83-46BF-A884-1CEF9D1A6F59.mlmodelc/model.mil' with error code: -5.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    convTranspose2dInput: f16[1, 3, 3, 1];
  }

  consts {
    operand_0: f16[2, 3, 3, 1] @bytes([0, 60, 0, 60, 0, 60, 0, 60, 0, 60, 0, 60, 0, 60, 0, 60, 0, 60, 0, 60, 0, 60, 0, 60, 0, 60, 0, 60, 0, 60, 0, 60, 0, 60, 0, 60]);
  }

  nodes {
    [convTranspose2dOutput] = convTranspose2d(convTranspose2dInput, operand_0, bias=null, dilations=[1, 1], filterLayout="ohwi", groups=1, inputLayout="nhwc", label="", outputPadding=[], outputSizes=[6, 6], padding=[0, 1, 0, 1], strides=[2, 2]);
  }

  outputs { convTranspose2dOutput; }
}
Error(s) occurred compiling MIL to BNNS graph:
[CreateBnnsGraphProgramFromMIL]: BNNS failed to compile due to an exception: Storage Reader expects file format version 2. at location 
 @ CreateBnnsGraphProgramFromMIL
