tests/snapshots/run_wpt_conformance__coreml_convTranspose2d_float32_4D_both_input_and_filter_constant_tensors_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
conv_transpose2d.https.any.js convTranspose2d float32 4D both input and filter constant tensors default options, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: Feature convTranspose2dInput is required but not specified.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[1, 1, 2, 2] @bytes([64, 150, 168, 62, 9, 49, 22, 63, 46, 18, 152, 62, 182, 191, 90, 59]);
    operand_1: f32[1, 1, 2, 2] @bytes([199, 83, 22, 63, 107, 151, 27, 63, 2, 162, 141, 60, 47, 222, 133, 62]);
  }

  nodes {
    [convTranspose2dOutput] = convTranspose2d(operand_1, operand_0, bias=null, dilations=[], filterLayout="", groups=1, inputLayout="", label="", outputPadding=[], outputSizes=null, padding=[], strides=[]);
  }

  outputs { convTranspose2dOutput; }
}
