tests/snapshots/run_wpt_conformance__coreml_convTranspose2d_float32_4D_input_and_filter_tensors_options_filterLayout_hwoi.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
conv_transpose2d.https.any.js convTranspose2d float32 4D input and filter tensors options.filterLayout=hwoi, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: MultiArray shape (1 x 1 x 3 x 3) does not match the shape (1 x 3 x 3 x 1) specified in the model description

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    convTranspose2dInput: f32[1, 1, 3, 3];
  }

  consts {
    operand_0: f32[3, 3, 2, 1] @bytes([123, 135, 92, 63, 43, 238, 122, 63, 210, 115, 32, 63, 106, 183, 124, 61, 110, 251, 34, 63, 75, 223, 164, 62, 124, 152, 86, 63, 26, 243, 63, 63, 199, 102, 243, 61, 170, 64, 201, 62, 110, 252, 125, 63, 40, 111, 13, 62, 139, 54, 168, 62, 232, 84, 145, 62, 5, 206, 95, 63, 72, 224, 216, 62, 234, 117, 56, 63, 224, 83, 20, 62]);
  }

  nodes {
    [convTranspose2dOutput] = convTranspose2d(convTranspose2dInput, operand_0, bias=null, dilations=[], filterLayout="hwoi", groups=1, inputLayout="", label="", outputPadding=[], outputSizes=null, padding=[], strides=[]);
  }

  outputs { convTranspose2dOutput; }
}
