tests/snapshots/run_wpt_conformance__coreml_cos_float16_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
cos.https.any.js cos float16 1D constant tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983272714_0.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([206, 192, 114, 188, 9, 183, 70, 63, 61, 41, 74, 60, 210, 192, 70, 189, 52, 189, 118, 188, 144, 63, 238, 189, 100, 63, 195, 193, 174, 190, 208, 185, 7, 193, 232, 63, 96, 63, 88, 186, 232, 62, 3, 64, 168, 60, 216, 64]);
  }

  nodes {
    [cosOutput] = cos(operand_0, label="");
  }

  outputs { cosOutput; }
}
E5RT encountered an STL exception. msg = Espresso exception: "Network translation error": MIL->EIR translation error at /private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983272714_0.mlmodelc/model.mil:6:12: Storage Reader expects file format version 2..
