tests/snapshots/run_wpt_conformance__coreml_cos_float16_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
cos.https.any.js cos float16 4D tensor, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: Feature cumulativeSumInput is required but not specified.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    cosInput: f16[2, 2, 2, 3];
  }

  nodes {
    [cosOutput] = cos(cosInput, label="");
  }

  outputs { cosOutput; }
}
