tests/snapshots/run_wpt_conformance__coreml_cos_float32_2D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
cos.https.any.js cos float32 2D tensor, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'cosInput' must be of rank 3, instead got a multi-array value of rank 2.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    cosInput: f32[4, 6];
  }

  nodes {
    [cosOutput] = cos(cosInput, label="");
  }

  outputs { cosOutput; }
}
