tests/snapshots/run_wpt_conformance__coreml_cumulativeSum_with_float16_input_and_set_reversed_to_true_.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
cumulative_sum.https.any.js cumulativeSum with float16 input and set reversed to true., coreml
 cumulative_sum :: cumulativeSum with float16 input and set reversed to true.: index 0: actual=0 expected=-61.15625 ulp=21413 tolerance=4
  inputs: cumulativeSumInput: [60.4375, -86.9375, -19.5, -15.1484375, 13.453125, 45.4375, 61.09375, 70.75, -31.28125, 56.09375, 39, -3.275390625]
  expected cumulativeSumOutput: [-61.15625, -121.5625, -34.65625, -15.1484375, 190.75, 177.25, 131.875, 70.75, 60.53125, 91.8125 ...] (len=12)
  actual cumulativeSumOutput: [0, 60.4375, -26.5, -46, 0, 13.453125, 58.875, 120, 0, -31.28125 ...] (len=12)
  expected cumulativeSumOutput full nd:
[-61.15625, -121.5625, -34.65625, -15.1484375, 190.75, 177.25, 131.875, 70.75, 60.53125, 91.8125, ...] (len=12, shape=[1, 1, 3, 4])
  actual cumulativeSumOutput full nd:
[0, 60.4375, -26.5, -46, 0, 13.453125, 58.875, 120, 0, -31.28125, ...] (len=12, shape=[1, 1, 3, 4])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    cumulativeSumInput: f16[1, 1, 3, 4];
  }

  nodes {
    [cumulativeSumOutput] = cumulativeSum(cumulativeSumInput, exclusive=false, label="", reversed=true);
  }

  outputs { cumulativeSumOutput; }
}
